k8s/project/hellok8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellok8s-svc
spec:
  type: ClusterIP
  selector:
    app: hellok8s
  ports:
    - port: 8081
      targetPort: 8081
