k8s/project/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
#  type: LoadBalancer
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
