k8s/project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # We are defining this annotation to prevent nginx
    # from redirecting requests to `https` for now
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: nginx.do.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80

    - host: hello.do.com
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hellok8s-lb
                port:
                  number: 80
#              service:
#                name: hellok8s-svc
#                port:
#                  number: 8081
